# penguin

./: CMakeLists.txt  README.md  main.cpp  penguin
include/: Penguin.hpp
src/: Penguin.cpp
test/: CMakeLists.txt  PenguinTest.cpp
